--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title:               Aiden
 
 # The unique resource location of your page.
 # Set to `https://<username>.github.io` when hosting on GitHub Pages
-url:                 https://isme2n.github.io
+url:                 https://it-4.github.io
 
 # Set to '' when hosting a blog on GitHub Pages, ie on `//<username>.github.io`
 # Set to '/<reponame>' when using the `gh-pages` branch of a repository
@@ -24,7 +24,7 @@ description:         >
 # This should be the same author as first entry in `_data/authors.yml`
 author:
   name:              aiden min
-  email:             zoqozqz@gmail.com
+  email:             stora314@gmail.com
 
 # Fallback image and color
 image:               /assets/img/nap.jpg
@@ -48,7 +48,7 @@ google_fonts:        Lato
 google_analytics:    UA-92346434-1
 
 # Setting a disqus shortname will enable the comment section on pages with `comments: true` in the front matter
-disqus_shortname:    isme2n
+disqus_shortname:    it-4
 
 # This text will appear in the footer of every page. Markdown enabled.
 copyright:           '&copy; 2017. by isme2n'
