--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description:         >
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
-  name:              aiden min
+  name:              KangHun Lee
   email:             stora314@gmail.com
 
 # Fallback image and color
