--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -23,7 +23,7 @@ it-4:
   # Comment/uncommet to show/hide
   # Icons appear in order, can be rearranged:
   social:
-    facebook:        D.SkullLee
+    facebook:        it4khl
     # twitter:         <username>
     # google:          <number>
     # vk:              <username>
