--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@ it-4:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Development is like Lego.
+    Development is like Lego.<br>
     The fun of what to make and the sense of achievement after it is made.
 
   # This photo will be used in the about section
